vehicle/tests/golden/error/dataset/mismatchedDimensions/mismatchedDimensions.vcl
-- Test passes dataset of type Tensor Nat [4]
@dataset
trainingDataset : Tensor Nat [4,4]
